[package]
name = "gdlint-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-gdscript = "6.1.0"
type-sitter = "0.10.0"
